<resources>
    <string name="app_name">Suprem Tournaments App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fecha_inicio">Fecha inicio</string>
    <string name="fecha_finalizacion">Fecha Finalización</string>
    <string name="nivel">Nivel</string>
    <string name="menores_edad">Menores edad</string>
    <string name="descripcion_completa">Descripción completa</string>
    <string name="hint_basico">Escribe aqui</string>
    <string name="nombre_gestor">Nombre gestor:</string>
    <string name="descripcion_corta">Descripción corta</string>
    <string name="informacion_gestor">Información gestor:</string>
    <string name="email_gestor">Email gestor:</string>
</resources>