<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroudcolor"
    android:orientation="vertical"
    tools:context=".TorneoIndividualFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:longClickable="true"
        android:src="@android:drawable/ic_dialog_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nombreTorneoTextView"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:gravity="center"
            android:text="Nombre Torneo"
            android:textColor="@color/optionscolor"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/border_redondo"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="380dp"
                android:layout_height="184dp"
                android:layout_margin="3dp"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:id="@+id/floatButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/segundo_border_redondo"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/descripcion_completa"
                    android:textColor="@color/secondtextcolor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/descripcionCompletaTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="3dp"
                    android:text="TextView"
                    android:textColor="@color/textcolor" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Más información"
                    android:textColor="@color/secondtextcolor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nivelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/nivel"
                    android:textColor="@color/textcolor" />

                <TextView
                    android:id="@+id/fechaInicioTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/fecha_inicio"
                    android:textColor="@color/textcolor" />

                <TextView
                    android:id="@+id/fechaFinalizaTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/fecha_finalizacion"
                    android:textColor="@color/textcolor" />

                <CheckBox
                    android:id="@+id/menoresEdadCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:clickable="false"
                    android:enabled="false"
                    android:text="@string/menores_edad"
                    android:textColor="@color/textcolor" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/informacion_gestor"
                    android:textColor="@color/secondtextcolor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nombreGestorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/nombre_gestor"
                    android:textColor="@color/textcolor" />

                <TextView
                    android:id="@+id/emailGestorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/email_gestor"
                    android:textColor="@color/textcolor" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>